--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,14 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "php": ">=5.4.0"
+    "php": ">=7.0"
   },
   "require-dev": {
     "phpunit/phpunit": "3.7.*"
   },
   "autoload": {
     "psr-4": {
-      "EventStream\\": "src/"
+      "Stk2k\\EventStream\\": "src/"
     }
   }
 }
