--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "php": ">=7.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "3.7.*"
+    "phpunit/phpunit": "^6.3.0",
+    "php-coveralls/php-coveralls": "^2.0"
   },
   "autoload": {
     "psr-4": {
